--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -12,8 +12,8 @@
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <p>What is the longest word you can find?</p>
   <div class="input-group mb-3" style="width: 400px">
-    <input type="text" name="???" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2">
-    <!--"name"'s value is the key of "name" parameter => query=are+you+here%3F-->
+    <input type="text" name="word" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2">
+    <!--"name"'s value is the key of "word" parameter => query=are+you+here%3F-->
     <div class="input-group-append">
       <button class="btn btn-primary" type="submit">Play!</button>
     </div>
