--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,5 +1,5 @@
 <h1>Your score</h1>
 
 <div class="url">
-  <%= link_to "back to game", new_path %>
+  <%= link_to "Play again", new_path %>
 </div>
